solved alignment issue

--- a/output.css
+++ b/output.css
@@ -692,6 +692,10 @@ video {
   width: 100%;
 }
 
+.w-\[50px\]{
+  width: 50px;
+}
+
 .cursor-pointer{
   cursor: pointer;
 }
@@ -854,6 +858,10 @@ video {
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-\[30px\]{
+  font-size: 30px;
 }
 
 .font-bold{
